[gd_scene load_steps=3 format=3 uid="uid://b41yfopptrkch"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_ct414"]

[sub_resource type="Theme" id="Theme_7axfn"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -1.0
offset_top = 2.0
offset_right = 39.0
offset_bottom = 42.0
mouse_filter = 2
script = ExtResource("1_ct414")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
z_index = 1000
offset_left = 1055.0
offset_top = 334.0
offset_right = 1142.0
offset_bottom = 645.0

[node name="Red" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_7axfn")
toggle_mode = true
button_pressed = true
text = "RED"
metadata/identifier = 0

[node name="Green" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "GREEN"

[node name="Blue" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "BLUE
"

[node name="Yellow" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "YELLOW"

[node name="Orange" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "ORANGE"

[node name="Purple" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "PURPLE"

[node name="Cyan" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "CYAN"

[node name="Magenta" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "MAGENTA"

[node name="Lime" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "LIME
"

[node name="gameArea" type="ColorRect" parent="." node_paths=PackedStringArray("shortcut_context")]
z_index = -1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 1150.0
offset_bottom = 631.0
grow_horizontal = 2
grow_vertical = 0
shortcut_context = NodePath("GridLines")
color = Color(0.0214346, 0.0214346, 0.0214346, 1)

[node name="GridLines" type="Node2D" parent="gameArea"]

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Red" to="." method="_on_color_button_pressed" binds= [0]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Green" to="." method="_on_color_button_pressed" binds= [1]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Blue" to="." method="_on_color_button_pressed" binds= [2]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Yellow" to="." method="_on_color_button_pressed" binds= [3]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Orange" to="." method="_on_color_button_pressed" binds= [4]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Purple" to="." method="_on_color_button_pressed" binds= [5]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Cyan" to="." method="_on_color_button_pressed" binds= [6]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Magenta" to="." method="_on_color_button_pressed" binds= [7]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Lime" to="." method="_on_color_button_pressed" binds= [8]]
